@@ -1,0 +1,36 @@
+Favorite Views
+--------------
+
+Set up user.
+
+    >>> uf = app.site.acl_users
+    >>> _ignored = uf._doAddUser('mgr', 'mgrpw', ['Manager'], [])
+
+Create the browser object we'll be using.
+
+    >>> from Testing.testbrowser import Browser
+    >>> browser = Browser()
+    >>> browser.handleErrors = False
+    >>> browser.addHeader('Authorization', 'Basic mgr:mgrpw')
+
+Add a Topic.
+
+    >>> browser.open('http://localhost/site/++add++Topic')
+    >>> '[[cmf_default][Add [[cmf_default][Topic]]]]' in browser.contents
+    True
+    >>> browser.getControl(name='form.id').value = 'myTopic'
+    >>> browser.getControl('[[zope][Add]]').click()
+    >>> '[[cmf_default][[[cmf_default][Topic]] added.]]' in browser.contents
+    True
+
+Use the criteria form.
+
+    >>> browser.open('http://localhost/site/myTopic/@@criteria.html')
+    >>> 'Topic Criteria: myTopic' in browser.contents
+    True
+
+Use the view.
+
+    >>> browser.open('http://localhost/site/myTopic/@@view.html')
+    >>> '[[cmf_default][Topic Matches:]]' in browser.contents
+    True
